Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-16823

Autodetected compilers don't get redetected when written settings are wrong

    XMLWordPrintable

Details

    Description

      For example when running Qt Creator 4.2, autodetected compilers get "darwin" as ABI on macOS.

      Qt Creator 4.1 doesn't know "darwin", since it was "macos" before 4.2, and sets the abi to "unknown", breaking all compilers, and kits.

      Unfortunatly that "unknown" is written to the settings, so Qt Creator 4.2 happily reads that as new abis for the compilers and is broken too.

      Instead, when broken settings for autodetected compilers are found, it should redetect the settings for it.

      Attachments

        For Gerrit Dashboard: QTCREATORBUG-16823
        # Subject Branch Project Status CR V

        Activity

          People

            hunger Tobias Hunger
            con Eike Ziller
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes