GccToolChain: Redetect ABIs if the targetAbi is invalid

Fixes issues with broken ABIs in the settings, like you get when going
from QtCreator 4.2 to 4.1 and back.

Task-number: QTCREATORBUG-16823
Change-Id: Ibcab5d3bc8255dfeb647e512f5db1d94155f9d9a
Reviewed-by: Eike Ziller <eike.ziller@qt.io>